<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/lastMatch"
        android:enabled="true"
        android:title="@string/bottom_nav_last_match"
        android:icon="@drawable/ic_last_match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nextMatch"
        android:enabled="true"
        android:icon="@drawable/ic_next_match"
        android:title="@string/bottom_nav_next_match"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/bottom_nav_favorites"
        app:showAsAction="ifRoom"/>
</menu>